# controlling_youbot_arm

./: .gitignore  .gitmodules
report/: appendix_ht_matrices.tex  control_systems.tex  main.dvi  (+12 more)
ros_packages/youbot_arm_control/: CMakeLists.txt  package.xml
ros_packages/youbot_arm_control/calculations/: alisa.py  identification.py  xifull.py
ros_packages/youbot_arm_control/calculations/compute_xi_v2_symple/: linear_model.py  test_regex.py
ros_packages/youbot_arm_control/calculations/compute_xi_v2_symple/backup/: linear_model.py
ros_packages/youbot_arm_control/calculations/compute_xi_v2_symple/xi/: xi_00.py  xi_01.py  xi_02.py  xi_03.py  xi_04.py  xi_11.py  xi_12.py  xi_13.py  xi_14.py  xi_22.py  xi_23.py  xi_24.py  xi_33.py  xi_34.py  xi_44.py
ros_packages/youbot_arm_control/calculations/compute_xi_v3_simp/: linear_model.py
ros_packages/youbot_arm_control/calculations/compute_xi_v5/: functions_MCG.py  linear_model.py  linear_model_control.py
ros_packages/youbot_arm_control/calculations/control_equations/: control.ipynb
ros_packages/youbot_arm_control/calculations/find_linears_scilab/: find_lin_depend.sce  taus.sce
ros_packages/youbot_arm_control/calculations/libs/: plot_stuff.py  utils.py
ros_packages/youbot_arm_control/include/: ControlNode.h
ros_packages/youbot_arm_control/launch/: collect_ident_data.launch  control_node.launch  get_joint_trajectory.launch  make_poses_list.launch  youbot_arm_model.launch  youbot_arm_model_dh.launch  youbot_arm_model_dh_ik.launch
ros_packages/youbot_arm_control/msg/: DecartTrajectory.msg
ros_packages/youbot_arm_control/rviz/: for_working_with_trajectory.rviz
ros_packages/youbot_arm_control/scripts/: collect_ident_data.py  dec2joint_translator.py  decart_trajectory_publisher.py  drawer.py  fk_test.py  ik_client.py  ik_server.py  make_poses_list.py  send_target_pose.py  trajectory_vizualizator.py
ros_packages/youbot_arm_control/scripts/config/: __init__.py  config.py
ros_packages/youbot_arm_control/scripts/dynamics/: chi_vectors.txt  identification.py  linear_model.py  plot_stuff.py  xi.py
ros_packages/youbot_arm_control/scripts/libs/: __init__.py  kinematics.py  parser.py  ploter.py
ros_packages/youbot_arm_control/src/: ControlNode.cpp  control_node.cpp
ros_packages/youbot_arm_control/sympy/: identification.py  linear_model.py  plot_stuff.py  xi.py
ros_packages/youbot_arm_control/sympy/.ipynb_checkpoints/: NE-checkpoint.ipynb  Untitled-checkpoint.ipynb  Untitled2-checkpoint.ipynb  checks-checkpoint.ipynb  ik-checkpoint.ipynb  linear_model-checkpoint.ipynb
ros_packages/youbot_arm_control/sympy/EE/: EE0.txt  EE1.txt  EE10.txt  EE11.txt  EE12.txt  EE13.txt  EE14.txt  EE15.txt  EE16.txt  EE17.txt  EE18.txt  EE19.txt  EE2.txt  EE20.txt  EE21.txt  EE22.txt  EE23.txt  EE24.txt  EE25.txt  EE26.txt  EE27.txt  EE28.txt  EE29.txt  EE3.txt  EE30.txt  EE31.txt  EE32.txt  EE33.txt  EE34.txt  EE35.txt  EE36.txt  EE37.txt  EE38.txt  EE39.txt  EE4.txt  EE40.txt  EE41.txt  EE42.txt  EE43.txt  EE44.txt  (+60 more)
ros_packages/youbot_arm_control/sympy/new_materials/: filter_data.sce
ros_packages/youbot_arm_control/sympy/tau/: tau1.txt  tau2.txt  tau3.txt  tau4.txt  tau5.txt
ros_packages/youbot_arm_control/sympy/traj/: drawer.py
ros_packages/youbot_arm_control/sympy/trash/: ACs.txt  As.txt  DOMEGAs.txt  Gs.txt  NE.ipynb  OMEGAs.txt  Rs.txt  Ts.txt  Untitled.ipynb  Untitled2.ipynb  Untitled3.ipynb  Zs.txt  aa.txt  checks.ipynb  find_lin_depend.sce  ik.ipynb  linear_model.ipynb  linear_model_v2.py  r14.sce  read_from_files.sce  regressor.ods  rm.py  scan_folder.py  tq5.tex  we
ros_packages/youbot_arm_control/sympy/xi/: xi_00.py  xi_01.py  xi_11.py  xi_13.py  xi_22.py  xi_34.py
ros_packages/youbot_arm_control/sympy/xi_tex/: xi_00  xi_01  xi_02  xi_04  xi_11  xi_12  xi_13  xi_14  xi_22  xi_23  xi_24  xi_33  xi_34
ros_packages/youbot_arm_control/urdf/: limits_dh.urdf.xacro  youbot_arm_only.urdf  youbot_arm_only.urdf.xacro  youbot_arm_only_dh.urdf.xacro
(+198 files in other folders)
