<?xml version="1.0"?>
<package>
    <name>youbot_arm_control</name>
    <version>1.0.0</version>
    <description>
        The package contains files which are useful for designing
        control for Youbot's manipulator.
    </description>

    <maintainer email="antonovspostbox@gmail.com">Evgeniy Antonov</maintainer>
    <license>TODO</license>
    <author email="antonovspostbox@gmail.com">Evgeniy Antonov</author>

    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>joint_state_publisher</run_depend>
    <run_depend>robot_state_publisher</run_depend>
    <run_depend>youbot_description</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>

    <build_depend>message_generation</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    
    <export>
    </export>
</package>
